Perl2C/parser.output
Terminals unused in grammar

    ERROR_MESSAGE
    KW_STATIC
    KW_TRUE
    KW_FALSE
    KW_NOT
    KW_BOOLEAN
    KW_BREAK
    KW_INTEGER
    KW_STRING
    KW_CONTINUE
    KW_MOD
    KW_CHARACTER
    KW_VOID
    KW_END
    KW_BEGIN
    KW_REAL
    KW_MAIN
    KW_READSTRING
    KW_READINTEGER
    KW_READREAL
    KW_WRITESTRING
    KW_WRITEINTEGER
    KW_WRITEREAL
    POSITIVEINT
    OP_RELTIONAL
    OP_ASSIGNMENT
    KW_FOR_EACH
    OP_DIFFERENT
    REGEX_OPERATOR
    NEG_REGEX_OPERATOR
    SPL_LIST_ARR_VAR
    KW_PRINT
    DeclarationList
    OP_NOTEQUAL
    OP_GREATER
    OP_GREATEROREQUAL
    OP_LESSOREQUAL
    OP_LESS
    OP_PLUS
    OP_MINUS
    KW_DIV
    KW_THEN


Grammar

    0 $accept: ROOT TK_EOF

    1 ROOT: ExtDeclaration

    2 ExtDeclaration: StatementList
    3               | Declaration FuncDef

    4 Declaration: KW_SUB IDENTIFIER

    5 ParameterList: %empty
    6              | Parameter
    7              | ParameterList OP_COMMA Parameter

    8 Parameter: VARIABLE
    9          | CONSTANT_STRING
   10          | POSITIVE_INT
   11          | REAL

   12 FuncDef: LEFT_CURLY_BRACKET StatementList RIGHT_CURLY_BRACKET

   13 StatementList: Statement StatementList
   14              | Statement

   15 Statement: CompoundStatement
   16          | SelectionStatement
   17          | FunctionCalling OP_SEMICOLON
   18          | ExpressionStatement
   19          | IterationStatement

   20 FunctionCalling: IDENTIFIER OP_LEFT_PARENTHESIS ParameterList OP_RIGHT_PARENTHESIS

   21 CompoundStatement: LEFT_CURLY_BRACKET CompoundStatement_2

   22 CompoundStatement_2: RIGHT_CURLY_BRACKET
   23                    | StatementList RIGHT_CURLY_BRACKET

   24 SelectionStatement: if_main else_if_expr else_expr

   25 if_main: KW_IF OP_LEFT_PARENTHESIS Expression OP_RIGHT_PARENTHESIS LEFT_CURLY_BRACKET Statement RIGHT_CURLY_BRACKET

   26 else_expr: %empty
   27          | KW_ELSE LEFT_CURLY_BRACKET Statement RIGHT_CURLY_BRACKET

   28 else_if_expr: %empty
   29             | else_if_expr KW_ELSE if_main

   30 ExpressionStatement: OP_SEMICOLON
   31                    | Expression OP_SEMICOLON
   32                    | KW_RETURN ExpressionStatement

   33 IterationStatement: KW_WHILE OP_LEFT_PARENTHESIS Expression OP_RIGHT_PARENTHESIS Statement
   34                   | KW_DO Statement KW_WHILE OP_LEFT_PARENTHESIS Expression OP_RIGHT_PARENTHESIS OP_SEMICOLON
   35                   | KW_FOR OP_LEFT_PARENTHESIS Expression OP_SEMICOLON Expression OP_SEMICOLON Expression OP_RIGHT_PARENTHESIS Statement
   36                   | KW_UNTIL OP_LEFT_PARENTHESIS Expression OP_RIGHT_PARENTHESIS Statement

   37 Expression: AssignmentExpression

   38 AssignmentExpression: ConditionalExpression
   39                     | UnaryExpression ASSIGN_OPER AssignmentExpression

   40 ASSIGN_OPER: T_ASSIGN_OPER
   41            | OP_EQUAL

   42 ConditionalExpression: LogicalOrExpression
   43                      | LogicalOrExpression OP_QUESTION Expression OP_COLON ConditionalExpression

   44 LogicalOrExpression: LogicalAndExpression
   45                    | LogicalOrExpression KW_OR LogicalAndExpression

   46 LogicalAndExpression: InclusiveOrExpression
   47                     | LogicalAndExpression KW_AND InclusiveOrExpression

   48 InclusiveOrExpression: ExclusiveOrExpression
   49                      | InclusiveOrExpression OP_BITWISE_OR ExclusiveOrExpression

   50 ExclusiveOrExpression: AndExpression
   51                      | ExclusiveOrExpression OP_XOR AndExpression

   52 AndExpression: EqualityExpression
   53              | AndExpression OP_BITWISE_AND EqualityExpression

   54 EqualityExpression: RelationalExpression
   55                   | EqualityExpression OP_EQUALITY RelationalExpression

   56 RelationalExpression: ShiftExpression
   57                     | RelationalExpression OP_RELATIONAL ShiftExpression

   58 ShiftExpression: AdditiveExpression
   59                | ShiftExpression OP_SHIFT AdditiveExpression

   60 AdditiveExpression: MultiplicativeExpression
   61                   | AdditiveExpression OP_ADDSUB MultiplicativeExpression

   62 MultiplicativeExpression: UnaryExpression
   63                         | MultiplicativeExpression MultDivRemOP UnaryExpression

   64 MultDivRemOP: OP_MULT
   65             | OP_DIVIS
   66             | OP_REM

   67 UnaryExpression: PostfixExpression
   68                | OP_INCDEC UnaryExpression
   69                | UnaryOperator UnaryExpression

   70 UnaryOperator: OP_BITWISE_AND
   71              | OP_ADDSUB
   72              | OP_MULT
   73              | OP_TILDE
   74              | OP_NOT

   75 PostfixExpression: PrimaryExpression
   76                  | PostfixExpression OP_LEFT_BRACKET Expression OP_RIGHT_BRACKET
   77                  | PostfixExpression OP_LEFT_PARENTHESIS PostfixExpression2
   78                  | PostfixExpression DOT_OPERATOR IDENTIFIER
   79                  | PostfixExpression OP_INCDEC

   80 PostfixExpression2: OP_RIGHT_PARENTHESIS
   81                   | ArgumentExpressionList OP_RIGHT_PARENTHESIS

   82 ArgumentExpressionList: AssignmentExpression
   83                       | ArgumentExpressionList OP_COMMA AssignmentExpression

   84 PrimaryExpression: VARIABLE
   85                  | Constant
   86                  | OP_LEFT_PARENTHESIS Expression OP_RIGHT_PARENTHESIS

   87 Constant: POSITIVE_INT


Terminals, with rules where they appear

    TK_EOF (0) 0
    error (256)
    ERROR_MESSAGE (258)
    KW_STATIC (259)
    KW_TRUE (260)
    KW_FALSE (261)
    KW_DO (262) 34
    KW_IF (263) 25
    KW_NOT (264)
    KW_BOOLEAN (265)
    KW_BREAK (266)
    KW_ELSE (267) 27 29
    KW_AND (268) 47
    KW_INTEGER (269)
    KW_STRING (270)
    KW_CONTINUE (271)
    KW_FOR (272) 35
    KW_MOD (273)
    KW_CHARACTER (274)
    KW_VOID (275)
    KW_RETURN (276) 32
    KW_END (277)
    KW_BEGIN (278)
    KW_REAL (279)
    KW_WHILE (280) 33 34
    KW_OR (281) 45
    KW_MAIN (282)
    KW_READSTRING (283)
    KW_READINTEGER (284)
    KW_READREAL (285)
    KW_WRITESTRING (286)
    KW_WRITEINTEGER (287)
    KW_WRITEREAL (288)
    VARIABLE (289) 8 84
    IDENTIFIER <string> (290) 4 20 78
    CONSTANT_STRING (291) 9
    POSITIVEINT (292)
    REAL (293) 11
    OP_ADDSUB (294) 61 71
    OP_INCDEC (295) 68 79
    OP_BITWISE_OR (296) 49
    OP_XOR (297) 51
    OP_BITWISE_AND (298) 53 70
    OP_MULT (299) 64 72
    OP_DIVIS (300) 65
    OP_REM (301) 66
    OP_EQUAL (302) 41
    OP_EQUALITY (303) 55
    OP_RELTIONAL (304)
    OP_SHIFT (305) 59
    OP_ASSIGNMENT (306)
    OP_SEMICOLON (307) 17 30 31 34 35
    OP_LEFT_PARENTHESIS (308) 20 25 33 34 35 36 77 86
    OP_RIGHT_PARENTHESIS (309) 20 25 33 34 35 36 80 81 86
    OP_TILDE (310) 73
    OP_COMMA (311) 7 83
    OP_LEFT_BRACKET (312) 76
    OP_RIGHT_BRACKET (313) 76
    OP_NOT (314) 74
    LEFT_CURLY_BRACKET (315) 12 21 25 27
    RIGHT_CURLY_BRACKET (316) 12 22 23 25 27
    KW_SUB <string> (317) 4
    KW_FOR_EACH (318)
    KW_UNTIL (319) 36
    POSITIVE_INT (320) 10 87
    OP_DIFFERENT (321)
    REGEX_OPERATOR (322)
    NEG_REGEX_OPERATOR (323)
    DOT_OPERATOR (324) 78
    SPL_LIST_ARR_VAR (325)
    T_ASSIGN_OPER (326) 40
    OP_COLON (327) 43
    OP_QUESTION (328) 43
    KW_PRINT (329)
    DeclarationList (330)
    OP_RELATIONAL (331) 57
    OP_NOTEQUAL (332)
    OP_GREATER (333)
    OP_GREATEROREQUAL (334)
    OP_LESSOREQUAL (335)
    OP_LESS (336)
    OP_PLUS (337)
    OP_MINUS (338)
    KW_DIV (339)
    KW_THEN (340)


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    ROOT <string> (87)
        on left: 1
        on right: 0
    ExtDeclaration (88)
        on left: 2 3
        on right: 1
    Declaration (89)
        on left: 4
        on right: 3
    ParameterList (90)
        on left: 5 6 7
        on right: 7 20
    Parameter (91)
        on left: 8 9 10 11
        on right: 6 7
    FuncDef (92)
        on left: 12
        on right: 3
    StatementList (93)
        on left: 13 14
        on right: 2 12 13 23
    Statement (94)
        on left: 15 16 17 18 19
        on right: 13 14 25 27 33 34 35 36
    FunctionCalling (95)
        on left: 20
        on right: 17
    CompoundStatement (96)
        on left: 21
        on right: 15
    CompoundStatement_2 (97)
        on left: 22 23
        on right: 21
    SelectionStatement (98)
        on left: 24
        on right: 16
    if_main (99)
        on left: 25
        on right: 24 29
    else_expr (100)
        on left: 26 27
        on right: 24
    else_if_expr (101)
        on left: 28 29
        on right: 24 29
    ExpressionStatement (102)
        on left: 30 31 32
        on right: 18 32
    IterationStatement (103)
        on left: 33 34 35 36
        on right: 19
    Expression (104)
        on left: 37
        on right: 25 31 33 34 35 36 43 76 86
    AssignmentExpression (105)
        on left: 38 39
        on right: 37 39 82 83
    ASSIGN_OPER (106)
        on left: 40 41
        on right: 39
    ConditionalExpression (107)
        on left: 42 43
        on right: 38 43
    LogicalOrExpression (108)
        on left: 44 45
        on right: 42 43 45
    LogicalAndExpression (109)
        on left: 46 47
        on right: 44 45 47
    InclusiveOrExpression (110)
        on left: 48 49
        on right: 46 47 49
    ExclusiveOrExpression (111)
        on left: 50 51
        on right: 48 49 51
    AndExpression (112)
        on left: 52 53
        on right: 50 51 53
    EqualityExpression (113)
        on left: 54 55
        on right: 52 53 55
    RelationalExpression (114)
        on left: 56 57
        on right: 54 55 57
    ShiftExpression (115)
        on left: 58 59
        on right: 56 57 59
    AdditiveExpression (116)
        on left: 60 61
        on right: 58 59 61
    MultiplicativeExpression (117)
        on left: 62 63
        on right: 60 61 63
    MultDivRemOP (118)
        on left: 64 65 66
        on right: 63
    UnaryExpression (119)
        on left: 67 68 69
        on right: 39 62 63 68 69
    UnaryOperator (120)
        on left: 70 71 72 73 74
        on right: 69
    PostfixExpression (121)
        on left: 75 76 77 78 79
        on right: 67 76 77 78 79
    PostfixExpression2 (122)
        on left: 80 81
        on right: 77
    ArgumentExpressionList (123)
        on left: 82 83
        on right: 81 83
    PrimaryExpression (124)
        on left: 84 85 86
        on right: 75
    Constant (125)
        on left: 87
        on right: 85


State 0

    0 $accept: . ROOT TK_EOF

    KW_DO                shift, and go to state 1
    KW_IF                shift, and go to state 2
    KW_FOR               shift, and go to state 3
    KW_RETURN            shift, and go to state 4
    KW_WHILE             shift, and go to state 5
    VARIABLE             shift, and go to state 6
    IDENTIFIER           shift, and go to state 7
    OP_ADDSUB            shift, and go to state 8
    OP_INCDEC            shift, and go to state 9
    OP_BITWISE_AND       shift, and go to state 10
    OP_MULT              shift, and go to state 11
    OP_SEMICOLON         shift, and go to state 12
    OP_LEFT_PARENTHESIS  shift, and go to state 13
    OP_TILDE             shift, and go to state 14
    OP_NOT               shift, and go to state 15
    LEFT_CURLY_BRACKET   shift, and go to state 16
    KW_SUB               shift, and go to state 17
    KW_UNTIL             shift, and go to state 18
    POSITIVE_INT         shift, and go to state 19

    ROOT                      go to state 20
    ExtDeclaration            go to state 21
    Declaration               go to state 22
    StatementList             go to state 23
    Statement                 go to state 24
    FunctionCalling           go to state 25
    CompoundStatement         go to state 26
    SelectionStatement        go to state 27
    if_main                   go to state 28
    ExpressionStatement       go to state 29
    IterationStatement        go to state 30
    Expression                go to state 31
    AssignmentExpression      go to state 32
    ConditionalExpression     go to state 33
    LogicalOrExpression       go to state 34
    LogicalAndExpression      go to state 35
    InclusiveOrExpression     go to state 36
    ExclusiveOrExpression     go to state 37
    AndExpression             go to state 38
    EqualityExpression        go to state 39
    RelationalExpression      go to state 40
    ShiftExpression           go to state 41
    AdditiveExpression        go to state 42
    MultiplicativeExpression  go to state 43
    UnaryExpression           go to state 44
    UnaryOperator             go to state 45
    PostfixExpression         go to state 46
    PrimaryExpression         go to state 47
    Constant                  go to state 48


State 1

   34 IterationStatement: KW_DO . Statement KW_WHILE OP_LEFT_PARENTHESIS Expression OP_RIGHT_PARENTHESIS OP_SEMICOLON

    KW_DO                shift, and go to state 1
    KW_IF                shift, and go to state 2
    KW_FOR               shift, and go to state 3
    KW_RETURN            shift, and go to state 4
    KW_WHILE             shift, and go to state 5
    VARIABLE             shift, and go to state 6
    IDENTIFIER           shift, and go to state 7
    OP_ADDSUB            shift, and go to state 8
    OP_INCDEC            shift, and go to state 9
    OP_BITWISE_AND       shift, and go to state 10
    OP_MULT              shift, and go to state 11
    OP_SEMICOLON         shift, and go to state 12
    OP_LEFT_PARENTHESIS  shift, and go to state 13
    OP_TILDE             shift, and go to state 14
    OP_NOT               shift, and go to state 15
    LEFT_CURLY_BRACKET   shift, and go to state 16
    KW_UNTIL             shift, and go to state 18
    POSITIVE_INT         shift, and go to state 19

    Statement                 go to state 49
    FunctionCalling           go to state 25
    CompoundStatement         go to state 26
    SelectionStatement        go to state 27
    if_main                   go to state 28
    ExpressionStatement       go to state 29
    IterationStatement        go to state 30
    Expression                go to state 31
    AssignmentExpression      go to state 32
    ConditionalExpression     go to state 33
    LogicalOrExpression       go to state 34
    LogicalAndExpression      go to state 35
    InclusiveOrExpression     go to state 36
    ExclusiveOrExpression     go to state 37
    AndExpression             go to state 38
    EqualityExpression        go to state 39
    RelationalExpression      go to state 40
    ShiftExpression           go to state 41
    AdditiveExpression        go to state 42
    MultiplicativeExpression  go to state 43
    UnaryExpression           go to state 44
    UnaryOperator             go to state 45
    PostfixExpression         go to state 46
    PrimaryExpression         go to state 47
    Constant                  go to state 48


State 2

   25 if_main: KW_IF . OP_LEFT_PARENTHESIS Expression OP_RIGHT_PARENTHESIS LEFT_CURLY_BRACKET Statement RIGHT_CURLY_BRACKET

    OP_LEFT_PARENTHESIS  shift, and go to state 50


State 3

   35 IterationStatement: KW_FOR . OP_LEFT_PARENTHESIS Expression OP_SEMICOLON Expression OP_SEMICOLON Expression OP_RIGHT_PARENTHESIS Statement

    OP_LEFT_PARENTHESIS  shift, and go to state 51


State 4

   32 ExpressionStatement: KW_RETURN . ExpressionStatement

    KW_RETURN            shift, and go to state 4
    VARIABLE             shift, and go to state 6
    OP_ADDSUB            shift, and go to state 8
    OP_INCDEC            shift, and go to state 9
    OP_BITWISE_AND       shift, and go to state 10
    OP_MULT              shift, and go to state 11
    OP_SEMICOLON         shift, and go to state 12
    OP_LEFT_PARENTHESIS  shift, and go to state 13
    OP_TILDE             shift, and go to state 14
    OP_NOT               shift, and go to state 15
    POSITIVE_INT         shift, and go to state 19

    ExpressionStatement       go to state 52
    Expression                go to state 31
    AssignmentExpression      go to state 32
    ConditionalExpression     go to state 33
    LogicalOrExpression       go to state 34
    LogicalAndExpression      go to state 35
    InclusiveOrExpression     go to state 36
    ExclusiveOrExpression     go to state 37
    AndExpression             go to state 38
    EqualityExpression        go to state 39
    RelationalExpression      go to state 40
    ShiftExpression           go to state 41
    AdditiveExpression        go to state 42
    MultiplicativeExpression  go to state 43
    UnaryExpression           go to state 44
    UnaryOperator             go to state 45
    PostfixExpression         go to state 46
    PrimaryExpression         go to state 47
    Constant                  go to state 48


State 5

   33 IterationStatement: KW_WHILE . OP_LEFT_PARENTHESIS Expression OP_RIGHT_PARENTHESIS Statement

    OP_LEFT_PARENTHESIS  shift, and go to state 53


State 6

   84 PrimaryExpression: VARIABLE .

    $default  reduce using rule 84 (PrimaryExpression)


State 7

   20 FunctionCalling: IDENTIFIER . OP_LEFT_PARENTHESIS ParameterList OP_RIGHT_PARENTHESIS

    OP_LEFT_PARENTHESIS  shift, and go to state 54


State 8

   71 UnaryOperator: OP_ADDSUB .

    $default  reduce using rule 71 (UnaryOperator)


State 9

   68 UnaryExpression: OP_INCDEC . UnaryExpression

    VARIABLE             shift, and go to state 6
    OP_ADDSUB            shift, and go to state 8
    OP_INCDEC            shift, and go to state 9
    OP_BITWISE_AND       shift, and go to state 10
    OP_MULT              shift, and go to state 11
    OP_LEFT_PARENTHESIS  shift, and go to state 13
    OP_TILDE             shift, and go to state 14
    OP_NOT               shift, and go to state 15
    POSITIVE_INT         shift, and go to state 19

    UnaryExpression    go to state 55
    UnaryOperator      go to state 45
    PostfixExpression  go to state 46
    PrimaryExpression  go to state 47
    Constant           go to state 48


State 10

   70 UnaryOperator: OP_BITWISE_AND .

    $default  reduce using rule 70 (UnaryOperator)


State 11

   72 UnaryOperator: OP_MULT .

    $default  reduce using rule 72 (UnaryOperator)


State 12

   30 ExpressionStatement: OP_SEMICOLON .

    $default  reduce using rule 30 (ExpressionStatement)


State 13

   86 PrimaryExpression: OP_LEFT_PARENTHESIS . Expression OP_RIGHT_PARENTHESIS

    VARIABLE             shift, and go to state 6
    OP_ADDSUB            shift, and go to state 8
    OP_INCDEC            shift, and go to state 9
    OP_BITWISE_AND       shift, and go to state 10
    OP_MULT              shift, and go to state 11
    OP_LEFT_PARENTHESIS  shift, and go to state 13
    OP_TILDE             shift, and go to state 14
    OP_NOT               shift, and go to state 15
    POSITIVE_INT         shift, and go to state 19

    Expression                go to state 56
    AssignmentExpression      go to state 32
    ConditionalExpression     go to state 33
    LogicalOrExpression       go to state 34
    LogicalAndExpression      go to state 35
    InclusiveOrExpression     go to state 36
    ExclusiveOrExpression     go to state 37
    AndExpression             go to state 38
    EqualityExpression        go to state 39
    RelationalExpression      go to state 40
    ShiftExpression           go to state 41
    AdditiveExpression        go to state 42
    MultiplicativeExpression  go to state 43
    UnaryExpression           go to state 44
    UnaryOperator             go to state 45
    PostfixExpression         go to state 46
    PrimaryExpression         go to state 47
    Constant                  go to state 48


State 14

   73 UnaryOperator: OP_TILDE .

    $default  reduce using rule 73 (UnaryOperator)


State 15

   74 UnaryOperator: OP_NOT .

    $default  reduce using rule 74 (UnaryOperator)


State 16

   21 CompoundStatement: LEFT_CURLY_BRACKET . CompoundStatement_2

    KW_DO                shift, and go to state 1
    KW_IF                shift, and go to state 2
    KW_FOR               shift, and go to state 3
    KW_RETURN            shift, and go to state 4
    KW_WHILE             shift, and go to state 5
    VARIABLE             shift, and go to state 6
    IDENTIFIER           shift, and go to state 7
    OP_ADDSUB            shift, and go to state 8
    OP_INCDEC            shift, and go to state 9
    OP_BITWISE_AND       shift, and go to state 10
    OP_MULT              shift, and go to state 11
    OP_SEMICOLON         shift, and go to state 12
    OP_LEFT_PARENTHESIS  shift, and go to state 13
    OP_TILDE             shift, and go to state 14
    OP_NOT               shift, and go to state 15
    LEFT_CURLY_BRACKET   shift, and go to state 16
    RIGHT_CURLY_BRACKET  shift, and go to state 57
    KW_UNTIL             shift, and go to state 18
    POSITIVE_INT         shift, and go to state 19
